2002-05-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model.[ch]: added remove_row and update_row
	virtual methods.
	(gda_data_model_class_init): initialize new members.
	(gda_data_model_remove_row): new function.
	(gda_data_model_update_row): new function.

2002-05-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/Makefile.am: re-added libgda-report directory to gtk-doc
	options.

2002-05-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model-list.c:
	* libgda/gda-data-model-array.c:
	* libgda/gda-data-model-hash.c:
	* libgda/gda-data-model.[ch]: added 'get_row' method to
	GdaDataModel class.

	* libgda/gda-select.c (fill_data): implemented retrieval of data
	from the source data model.

	* providers/mysql/gda-mysql-recordset.c (gda_mysql_recordset_get_row):
	new method implementation.

2002-05-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-select.[ch]: added basic implementation.
	(gda_select_init): create GScanner object.
	(gda_select_finalize): destroy GScanner object.
	(gda_select_set_source): new function.
	(gda_select_set_expression): new function.
	(gda_select_run): new function.
	(fill_data): implemented basic parsing of the expression (it only
	supports "foo=bar AND bar=foo..." expressions).

2002-05-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model.c (gda_data_model_begin_edit): don't start
	editing if the data model is not editable.
	(gda_data_model_get_column_position): new function.

	* libgda/gda-select.[ch]: new class for doing filtering data models
	based on a search expression.

	* libgda/Makefile.am:
	* libgda/libgda.h: added new files.

	* doc/C/*: added new documentation.

2002-05-16  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-value.[ch]:
	(gda_value_new_from_string):
	(gda_value_set_from_string):
	(gda_value_compare): new functions.

2002-05-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-server-provider.[ch]: added create_database to